--- a/about.html
+++ b/about.html
@@ -3,11 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Animal Gallery</title>
-
-  <!-- Bootstrap CSS -->
+  <title>Animal Gallery — About</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Custom styles -->
   <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
@@ -15,24 +12,38 @@
   <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom sticky-top">
     <div class="container">
       <a class="navbar-brand fw-bold" href="index.html">Animal Gallery</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav"
-        aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div id="nav" class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="details.html">Details</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link active" href="about.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="new-animal-form.html">Add Animal</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <!-- Page specific content will go here -->
+  <main class="container py-5">
+    <div class="row align-items-center">
+      <div class="col-lg-6">
+        <img src="https://cdn.pixabay.com/photo/2023/11/21/16/21/zebras-8403717_1280.jpg" class="w-100 rounded shadow" alt="Wildlife landscape">
+      </div>
+      <div class="col-lg-6">
+        <h1>About This Site</h1>
+        <p>This site is a static gallery built for a class assignment. It demonstrates multiple pages, a shared navigation menu, a searchable gallery, and a form page.</p>
+        <p>It uses <strong>Bootstrap</strong> for responsive design and simple JavaScript for the search feature. The site is deployed on GitHub Pages.</p>
+      </div>
+    </div>
+  </main>
 
-  <!-- Bootstrap JS -->
+  <footer class="py-4 border-top bg-light">
+    <div class="container small text-center text-muted">© <span id="year"></span> Animal Gallery</div>
+  </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
