--- a/details.html
+++ b/details.html
@@ -3,26 +3,22 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Animal Gallery</title>
-
-  <!-- Bootstrap CSS -->
+  <title>Animal Gallery — Details</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Custom styles -->
   <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
-  <!-- NAVBAR -->
+  <!-- NAVBAR (same as before) -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom sticky-top">
     <div class="container">
       <a class="navbar-brand fw-bold" href="index.html">Animal Gallery</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav"
-        aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div id="nav" class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="details.html">Details</a></li>
+          <li class="nav-item"><a class="nav-link active" href="details.html">Details</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="new-animal-form.html">Add Animal</a></li>
         </ul>
@@ -30,9 +26,28 @@
     </div>
   </nav>
 
-  <!-- Page specific content will go here -->
+  <main class="container py-5">
+    <div class="row g-4">
+      <div class="col-lg-6">
+        <img src="https://images.unsplash.com/photo-1546182990-dffeafbe841d?q=80&w=1600" class="w-100 rounded shadow" alt="African Lion">
+      </div>
+      <div class="col-lg-6">
+        <h1>African Lion</h1>
+        <p><strong>Type:</strong> Mammal</p>
+        <p><strong>Scientific name:</strong> <em>Panthera leo</em></p>
+        <p><strong>Habitat:</strong> African savannas and grasslands</p>
+        <p><strong>Diet:</strong> Carnivore</p>
+        <p>Lions are social big cats known for living in prides. They are apex predators and play a key role in maintaining ecosystems.</p>
+        <a href="index.html" class="btn btn-outline-secondary btn-sm">← Back to Gallery</a>
+      </div>
+    </div>
+  </main>
 
-  <!-- Bootstrap JS -->
+  <footer class="py-4 border-top bg-light">
+    <div class="container small text-center text-muted">© <span id="year"></span> Animal Gallery</div>
+  </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
