--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Animal Gallery</title>
-
-  <!-- Bootstrap CSS -->
+  <title>Animal Gallery — Home</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Custom styles -->
   <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
@@ -21,8 +18,7 @@
       </button>
       <div id="nav" class="collapse navbar-collapse">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="details.html">Details</a></li>
+          <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
           <li class="nav-item"><a class="nav-link" href="new-animal-form.html">Add Animal</a></li>
         </ul>
@@ -30,9 +26,91 @@
     </div>
   </nav>
 
-  <!-- Page specific content will go here -->
+  <!-- Search bar -->
+  <main class="container py-5">
+    <div class="mb-4">
+      <div class="input-group">
+        <input 
+          type="text" 
+          id="searchInput" 
+          class="form-control" 
+          placeholder="Search animals by name, type, or species..."
+          aria-label="Search animals">
+        <button id="searchBtn" class="btn btn-primary" type="button">Search</button>
+      </div>
+      <div id="noResults" class="text-muted small mt-2" style="display:none;">
+        No animals match your search.
+      </div>
+    </div>
 
-  <!-- Bootstrap JS -->
+    <!-- Animal cards -->
+    <div id="animalGrid" class="row g-4">
+      <!-- Lion -->
+      <div class="col-sm-6 col-lg-4 animal-card" data-name="African Lion" data-type="Mammal" data-species="Panthera leo" data-summary="Social big cat living in prides across African savannas.">
+        <div class="card h-100 shadow-sm">
+          <img src="https://images.unsplash.com/photo-1546182990-dffeafbe841d?q=80&w=1200" class="card-img-top" alt="African Lion">
+          <div class="card-body">
+            <h5 class="card-title">African Lion</h5>
+            <p class="card-text">Social big cat living in prides across African savannas.</p>
+            <a href="details.html" class="btn btn-primary btn-sm">View details</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Penguin -->
+      <div class="col-sm-6 col-lg-4 animal-card" data-name="Emperor Penguin" data-type="Bird" data-species="Aptenodytes forsteri" data-summary="Largest penguin species; breeds in Antarctic winter.">
+        <div class="card h-100 shadow-sm">
+          <img src="https://cdn.pixabay.com/photo/2014/08/27/12/59/penguins-429134_1280.jpg" class="card-img-top" alt="Emperor Penguin">
+          <div class="card-body">
+            <h5 class="card-title">Emperor Penguin</h5>
+            <p class="card-text">Largest penguin species; breeds in Antarctic winter.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Turtle -->
+      <div class="col-sm-6 col-lg-4 animal-card" data-name="Green Sea Turtle" data-type="Reptile" data-species="Chelonia mydas" data-summary="Herbivorous marine turtle found in tropical seas.">
+        <div class="card h-100 shadow-sm">
+          <img src="https://cdn.pixabay.com/photo/2025/01/12/15/25/tortoise-9328571_1280.jpg" class="card-img-top" alt="Green Sea Turtle">
+          <div class="card-body">
+            <h5 class="card-title">Green Sea Turtle</h5>
+            <p class="card-text">Herbivorous marine turtle found in tropical seas.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Red Panda -->
+      <div class="col-sm-6 col-lg-4 animal-card" data-name="Red Panda" data-type="Mammal" data-species="Ailurus fulgens" data-summary="Tree-dwelling mammal native to the Himalayas and China.">
+        <div class="card h-100 shadow-sm">
+          <img src="https://cdn.pixabay.com/photo/2022/10/07/09/24/little-panda-7504633_1280.jpg" class="card-img-top" alt="Red Panda">
+          <div class="card-body">
+            <h5 class="card-title">Red Panda</h5>
+            <p class="card-text">Tree-dwelling mammal native to the Himalayas and China.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Frog -->
+      <div class="col-sm-6 col-lg-4 animal-card" data-name="Poison Dart Frog" data-type="Amphibian" data-species="Dendrobatidae" data-summary="Small, vividly colored frogs from Central and South America.">
+        <div class="card h-100 shadow-sm">
+          <img src="https://cdn.pixabay.com/photo/2015/08/12/08/13/poison-frog-885593_1280.jpg" class="card-img-top" alt="Poison Dart Frog">
+          <div class="card-body">
+            <h5 class="card-title">Poison Dart Frog</h5>
+            <p class="card-text">Small, vividly colored frogs from Central and South America.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <!-- Footer -->
+  <footer class="py-4 border-top bg-light">
+    <div class="container small text-center text-muted">© <span id="year"></span> Animal Gallery</div>
+  </footer>
+
+  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/js/search.js"></script>
+  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
