--- a/new-animal-form.html
+++ b/new-animal-form.html
@@ -3,11 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Animal Gallery</title>
-
-  <!-- Bootstrap CSS -->
+  <title>Animal Gallery — Add Animal</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Custom styles -->
   <link rel="stylesheet" href="assets/styles.css">
 </head>
 <body>
@@ -15,8 +12,7 @@
   <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom sticky-top">
     <div class="container">
       <a class="navbar-brand fw-bold" href="index.html">Animal Gallery</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav"
-        aria-controls="nav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div id="nav" class="collapse navbar-collapse">
@@ -24,15 +20,62 @@
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="details.html">Details</a></li>
           <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="new-animal-form.html">Add Animal</a></li>
+          <li class="nav-item"><a class="nav-link active" href="new-animal-form.html">Add Animal</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <!-- Page specific content will go here -->
+  <main class="container py-5">
+    <h1>Suggest a New Animal</h1>
+    <form class="row g-3">
+      <div class="col-md-6">
+        <label class="form-label">Name</label>
+        <input type="text" class="form-control" required>
+      </div>
+      <div class="col-md-6">
+        <label class="form-label">Species</label>
+        <input type="text" class="form-control" required>
+      </div>
+      <div class="col-md-6">
+        <label class="form-label">Type</label>
+        <select class="form-select" required>
+          <option value="">Choose...</option>
+          <option>Mammal</option>
+          <option>Bird</option>
+          <option>Reptile</option>
+          <option>Amphibian</option>
+          <option>Fish</option>
+          <option>Invertebrate</option>
+        </select>
+      </div>
+      <div class="col-md-3">
+        <label class="form-label">Lifespan (years)</label>
+        <input type="number" class="form-control" required>
+      </div>
+      <div class="col-md-3">
+        <label class="form-label">Habitat</label>
+        <input type="text" class="form-control" required>
+      </div>
+      <div class="col-12">
+        <label class="form-label">Summary</label>
+        <textarea class="form-control" rows="4" required></textarea>
+      </div>
+      <div class="col-12">
+        <label class="form-label">Image URL</label>
+        <input type="url" class="form-control" required>
+      </div>
+      <div class="col-12">
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </div>
+    </form>
+  </main>
 
-  <!-- Bootstrap JS -->
+  <footer class="py-4 border-top bg-light">
+    <div class="container small text-center text-muted">© <span id="year"></span> Animal Gallery</div>
+  </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
